--- a/styles/globals.css
+++ b/styles/globals.css
@@ -81,6 +81,7 @@ html {
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(31, 45, 61, 0);
+  scroll-behavior: smooth;
 }
 article,
 aside,
@@ -17346,7 +17347,7 @@ svg {
   color: #fff;
 }
 .footer-dark {
-  background-color: #273444;
+  background-color: var(--dark);
   color: #a0aec0;
 }
 .footer-dark .heading {
@@ -26540,4 +26541,7 @@ span.flatpickr-weekday {
 .embla__slide {
   position: relative !important;
   flex: 0 0 100% !important;
+}
+.flexbox {
+display: flex;
 }
